linkedin align fix

--- a/src/containers/ListingPage/ListingPage.css
+++ b/src/containers/ListingPage/ListingPage.css
@@ -673,10 +673,8 @@
   font-size: 16px;
 }
 .socialLinkedInlink {
-  /* color: #fff; */
-  padding: 7px 21px;
   display: inline-block;
-  margin: 26px 10px;
+  margin: 26px 0px;
   font-size: 16px;
 }
 .modbp {
